--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.2.0'
+	testImplementation 'org.junit.vintage:junit-vintage-engine:5.2.0'
 }
